# sofa2_meta

./: .gitignore  .gitmodules  README.md  acc_lim_vel_filter.ros_package  costmap_based_vel_filter.ros_package  follow_me.ros_package  mode_controller.ros_package  ph.yaml  roboteq_tcp_driver.ros_package  sofa2_dynamixel.ros_package  spec.ros_package  system_checker.ros_package
acc_lim_vel_filter/: CMakeLists.txt  README.md  package.xml  setup.py
acc_lim_vel_filter/model/: acc_lim_vel_filter.ros_package
acc_lim_vel_filter/scripts/: acc_lim_vel_filter
acc_lim_vel_filter/src/acc_lim_vel_filter/: acc_lim_vel_filter_impl.py  acc_lim_vel_filter_ros.py
acc_lim_vel_filter/test/: test_acc_lim_vel_filter_hz_loop.test
base_operator/: CMakeLists.txt  package.xml
base_operator/include/base_operator/: Action.hpp  Operation.hpp  RosBaseOperator.hpp  Sequence.hpp
base_operator/src/: Action.cpp  RosBaseOperator.cpp  Sequence.cpp  base_operator_node.cpp
costmap_based_vel_filter/: CMakeLists.txt  README.md  package.xml  setup.py
costmap_based_vel_filter/model/: costmap_based_vel_filter.ros_package
costmap_based_vel_filter/scripts/: costmap_based_vel_filter
costmap_based_vel_filter/src/costmap_based_vel_filter/: costmap_based_vel_filter_impl.py  costmap_based_vel_filter_ros.py
dynamixel_tcp/: CMakeLists.txt  package.xml
dynamixel_tcp/include/dynamixel_adapter/: RosDynamixelAdapter.hpp  dynamixel_adapter.hpp  dynamixel_motor.hpp
dynamixel_tcp/include/dynamixel_operator/: Operators.hpp  RosDynamixelOperator.hpp
dynamixel_tcp/src/dynamixel_adapter/: RosDynamixelAdapter.cpp  dynamixel_adapter.cpp  dynamixel_adapter_node.cpp  dynamixel_motor.cpp
dynamixel_tcp/src/dynamixel_operator/: Operator.cpp  RosDynamixelOperator.cpp  SequenceOperator.cpp  SingleJointOperator.cpp  ToGoalOperator.cpp  dynamixel_operator_node.cpp
dynamixel_tcp/src/dynamixel_twist_joy/: dynamixel_twist_joy.cpp
dynamixel_tcp/src/unused/: YesOperator.cpp
follow_me/: CMakeLists.txt  README.md  package.xml
follow_me/common/src/: follow_me_common.cpp
follow_me/include/follow_me/: action_detector.hpp  cnn.hpp  ocv_common.hpp
follow_me/model/: follow_me.ros_package
follow_me/ros/src/: follow_me_ros.cpp
follow_me/src/: cnn.cpp  follow_me_node.cpp
follow_me/test/: test_follow_me_hz_loop.test  test_follow_me_service.test
joy_controller/: joy_controller.slx
mode_controller/: CMakeLists.txt  README.md  package.xml  setup.py
mode_controller/model/: mode_controller.ros_package
mode_controller/scripts/: mode_controller
mode_controller/src/mode_controller/: mode_controller_impl.py  mode_controller_ros.py
mode_controller/test/: test_mode_controller_hz_loop.test
roboteq_tcp_driver/: CMakeLists.txt  README.md  package.xml  setup.py
roboteq_tcp_driver/model/: roboteq_tcp_driver.ros_package
roboteq_tcp_driver/scripts/: driver
roboteq_tcp_driver/src/roboteq_tcp_driver/: driver_impl.py  driver_ros.py
roboteq_tcp_driver/test/: test_driver_hz_loop.test
ros_plc_modbus/plc_modbus_node/: CMakeLists.txt
ros_plc_modbus/plc_modbus_node/src/: plc_object_handler.cpp  ros_plc_modbus.cpp
sofa2/: CMakeLists.txt  package.xml  rviz.rviz
sofa2/config/cartographer_config/: sofa2.lua  sofa2_full.lua  sofa2_full2.lua  sofa2_slip.lua
sofa2/config/move_base_config/: costmap_common_params.yaml  eband_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
sofa2/config/twist_mux_config/: twist_mux_locks.yaml  twist_mux_topics.yaml
sofa2/launch/: sofa_release.launch
sofa2/launch/components/: sofa_base_operator.launch  sofa_bringup.launch  sofa_dynamixel.launch  sofa_dynamixel_tcp.launch  sofa_high_level.launch  sofa_joy.launch  sofa_mapping.launch  sofa_navigation.launch  sofa_people_tracker.launch  sofa_plc.launch  sofa_teleop.launch
sofa2/launch/mapping/: sofa_cartographer.launch  sofa_mapping.launch
sofa2/launch/mapping/cartographer/: sofa_bag_slam.launch  sofa_bag_slam_fast.launch  sofa_online_slam.launch
sofa2/launch/shelf/: sofa_dynamixel.launch  sofa_gmapping.launch  sofa_mapping.launch  sofa_release_mapping.launch  sofa_safe_joy.launch  sofa_test.launch
sofa2/map/: banglamung_5fl.pgm  banglamung_5fl.yaml  banglamung_5fl_costmap.pgm  banglamung_5fl_costmap.yaml  banglamung_eye_div.pgm  banglamung_eye_div.yaml  banglamung_eye_div_costmap.pgm  banglamung_eye_div_costmap.yaml  buddhasothorn_4fl.pgm  buddhasothorn_4fl.yaml  buddhasothorn_4fl_costmap.pgm  buddhasothorn_4fl_costmap.yaml  cbh_3fl.pgm  cbh_3fl.yaml  cbh_3fl_cost.pgm  cbh_3fl_cost.yaml  cbh_3fl_costmap.pgm  cbh_3fl_costmap.yaml  cbh_meeting.pgm  cbh_meeting.yaml  cbh_meeting_costmap.pgm  cbh_meeting_costmap.yaml  depa_2fl.pgm  depa_2fl.yaml  depa_7fl.pgm  depa_7fl.yaml  depa_7fl_2.yaml  depa_7fl_2_costmap.pgm  depa_7fl_2_costmap.yaml  depa_7fl_costmap.pgm  depa_7fl_costmap.yaml  fibo-6.yaml  fibo_4fl.pgm  fibo_4fl.yaml  fibo_6.pgm  fibo_6_costmap.yaml  kanchana_3fl.pgm  kanchana_3fl.yaml  kanchana_3fl_costmap.pgm  kanchana_3fl_costmap.yaml  (+9 more)
sofa2/map/ph/PGH/: PGH.psd  Untitled-3.psd  Untitled-4.psd  pgh-nav-1.pbm  pgh-nav.pgm  (+3 more)
sofa2/src/: dynamixel_controller.cpp  ros_plc_modbus.cpp  tcp_test_backup.cpp
sofa2/src/dynamixel_controller/: dynamixel_controller_backup.cpp
sofa2_dynamixel/: CMakeLists.txt  README.md  package.xml
sofa2_dynamixel/common/src/: dynamixel_controller_common.cpp
sofa2_dynamixel/model/: sofa2_dynamixel.ros_package
sofa2_dynamixel/ros/src/: dynamixel_controller_ros.cpp
sofa2_dynamixel/test/: test_dynamixel_controller_hz_loop.test
sofa2_meta/: CMakeLists.txt  package.xml
state_manager/: CMakeLists.txt  README.md  package.xml  setup.py
state_manager/model/: state_manager.ros_package
state_manager/scripts/: state_manager
state_manager/src/state_manager/: state_manager_impl.py  state_manager_ros.py
system_checker/: CMakeLists.txt  README.md  package.xml  setup.py
system_checker/scripts/: system_checker
system_checker/src/system_checker/: system_checker_impl.py  system_checker_ros.py
web_robot/: CMakeLists.txt  package.xml
(+1 files in other folders)
