<?xml version="1.0"?>
<package format="2">
  <name>acc_lim_vel_filter</name>
  <description>Acceleration Limit Velocity Filter</description>
  <version>0.0.0</version>
  <maintainer email="norawitn@hotmail.com">Norawit Nangsue</maintainer>
  <author email="norawitn@hotmail.com">Norawit Nangsue</author>
  <license>FIBO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- user dependencies -->
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf</depend>
  <depend>rospy</depend>
  <test_depend>rostest</test_depend>

  <!-- protected region additional package statements begin -->
  <!-- protected region additional package statements end -->
</package>
