<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_tcp</name>
  <version>0.0.1</version>
  <description>The dynamixel_tcp package</description>
  <maintainer email="norawitn@hotmail.com">Norawit Nangsue</maintainer>
  <license>FIBO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/plc_modbus_node</url> -->


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>async_comm</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
