<?xml version="1.0"?>
<package format="2">
  <name>mode_controller</name>
  <description>Custom Mode Controller for SOFA Robot</description>
  <version>0.0.0</version>
  <maintainer email="norawitn@hotmail.com">Norawit Nangsue</maintainer>
  <author email="norawitn@hotmail.com">Norawit Nangsue</author>
  <license>FIBO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- user dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>sensor_msgs</depend>
  <test_depend>rostest</test_depend>

  <!-- protected region additional package statements begin -->
  <!-- protected region additional package statements end -->
</package>
