<?xml version="1.0"?>
<package format="2">
  <name>sofa2_dynamixel</name>
  <description>A Dynamixel Controller for SOFA-2 Robot</description>
  <version>0.0.0</version>
  <maintainer email="norawitn@hotmail.com">Norawit Nangsue</maintainer>
  <author email="norawitn@hotmail.com">Norawit Nangsue</author>
  <license>FIBO</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- user dependencies -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <test_depend>rostest</test_depend>
  <!-- protected region additional package statements begin -->
  <!-- protected region additional package statements end -->
</package>
