<?xml version="1.0"?>
<package format="2">
  <name>state_manager</name>
  <description>State Manager</description>
  <version>0.0.0</version>
  <maintainer email="norawitn@hotmail.com">Norawit Nangsue</maintainer>
  <author email="norawitn@hotmail.com">Norawit Nangsue</author>
  <license>FIBO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- user dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <test_depend>rostest</test_depend>

  <!-- protected region additional package statements begin -->
  <!-- protected region additional package statements end -->
</package>
